turtleart.kerr36.Kerr36.scala.error
Compilation error:
Kerr36:12: error: overloaded method value forward with alternatives:
  (x$1: Int)Unit <and>
  (x$1: Double)Unit
 cannot be applied to ()
  forward()
  ^